--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div class="flex flex-col lg:flex-row">
         <!-- Image Fetch Section -->
-        <section class="flex flex-col self-center items-center -mt-[4.5rem] w-[300px] min-[400px]:w-[400px] sm:w-[600px] md:w-[700px]  lg:w-[800px] xl:w-[800px] p-4 pt-10 mx-auto mb-16 lg:mb-0">
+        <section class="flex flex-col self-center items-center -mt-[4.5rem] w-[300px] min-[400px]:w-[400px] sm:w-[600px] md:w-[700px]  lg:w-[1000px] xl:w-[1400px] p-4 pt-10 mx-auto mb-16 lg:mb-0">
             
             <!-- Loading Spinner -->
             <div x-show="loading" class="w-16 h-16 border-4 border-dashed border-gray-800 rounded-full animate-spin mb-4"></div>
@@ -88,7 +88,7 @@
             <div class="relative group">
                 <!-- Display Image -->
                 <div x-show="image && image.url" class="-m-0 neumorphic">
-                    <img :src="image?.url" alt="Random Image" class="object-cover w-96 h-72 sm:w-[500px] md:w-[600px] md:h-[500px] lg:w-[800px] lg:h-[420px] xl:w-[800px] mx-auto rounded-xl shadow-xl">
+                    <img :src="image?.url" alt="Random Image" class="object-cover w-96 h-72 sm:w-[500px] md:w-[600px] md:h-[500px] lg:w-[800px] lg:h-[500px] xl:w-[1280px] mx-auto rounded-xl shadow-xl">
                 </div>
 
                 <!-- Tooltip --> 
@@ -106,10 +106,10 @@
             <div class="flex items-center space-x-2 -mt-2 lg:-mt-6 mb-5 lg:mb-7">          
                 <div class="inline lg:flex lg:flex-row">
                     <h3 class="text-gray-600 text-sm sm:text-[1rem] lg:text-[0.8rem] lg:inline lg:relative lg:left-[150px] text-center bold uppercase mb-4 sm:mt-2 z-50 tracking-[1.5px]">Source</h3>
-                    <input type="radio" id="unsplash" value="unsplash" x-model="source" checked class="appearance-none w-6 h-6 sm:w-8 sm:h-8 ml-8 lg:mr-12 lg:mt-4 border-none neumorphic-input cursor-pointer">
-                    <label for="unsplash" class="label-text relative bottom-2 sm:bottom-[0.7rem] lg:relative lg:bottom-[-3rem] left-0 sm:left-[0.2rem] md:left-[0.25rem] lg:left-[-89px] text-gray-500 text-xs sm:text-sm lg:text[0.6rem] uppercase pr-2 xs:pr-8 sm:pr-14 lg:pr-[0.6rem]">Unsplash</label>
+                    <input type="radio" id="unsplash" value="unsplash" x-model="source" checked:active-radio class="appearance-none w-6 h-6 sm:w-8 sm:h-8 ml-8 lg:mr-12 lg:mt-4 border-none neumorphic-input cursor-pointer">
+                    <label for="unsplash" class="label-text relative bottom-2 sm:bottom-[0.7rem] lg:relative lg:bottom-[-3rem] left-0 sm:left-[0.2rem] md:left-[0.25rem] lg:left-[-89px] text-gray-500 text-xs sm:text-sm lg:text-[0.6rem] uppercase pr-2 xs:pr-8 sm:pr-14 lg:pr-[0.6rem]">Unsplash</label>
                     <input type="radio" id="pexels" value="pexels" x-model="source" class="appearance-none w-6 h-6 sm:w-8 sm:h-8 lg:mt-4  border-none neumorphic-input cursor-pointer">
-                    <label for="pexels" class="label-text relative bottom-2 sm:bottom-[0.7rem] lg:relative lg:bottom-[-3rem]  left-0 sm:left-[0.2rem] md:left-[0.25rem] lg:left-[-31px] text-gray-500 text-xs sm:text-sm lg:text[0.6rem] uppercase pr-4 lg:pr-[60px]">Pexels</label>
+                    <label for="pexels" class="label-text relative bottom-2 sm:bottom-[0.7rem] lg:relative lg:bottom-[-3rem]  left-0 sm:left-[0.2rem] md:left-[0.25rem] lg:left-[-31px] text-gray-500 text-xs sm:text-sm lg:text-[0.6rem] uppercase pr-4 lg:pr-[60px]">Pexels</label>
                 </div>
             </div>
 
