--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     </button>
                     <a href="mailto:matthew.dean@netmatters-scs.com" class="w-auto text-black hover:text-[#79797a] px-2">
                     <i class="fa-regular fa-envelope neumorphic-button"></i></a>
+                    <button id="clearLocalStorage" class="w-auto text-black px-2 hover:text-red-600">
+                        <i class="fa-solid fa-snowplow neumorphic-button px-2"></i>
+                    </button>
                 </nav>
             </div>
         </header>
@@ -62,7 +65,7 @@
             </div>
         </section>
 
-        <div class="flex flex-col lg:flex-row">
+        <div class="flex flex-col">
             <!-- Image Fetch Section -->
             <section class="flex flex-col self-center items-center -mt-[4.5rem] w-[300px] min-[400px]:w-[400px] sm:w-[600px] md:w-[700px]  lg:w-[1000px] xl:w-[1400px] p-4 pt-10 mx-auto mb-16 lg:mb-0">
                 
@@ -87,7 +90,7 @@
                 </div>
             </section>
 
-            <div class="flex flex-col self-center items-center -mt-10 w-[300px] p-4 pt-10 mx-auto neumorphic">
+            <div class="flex flex-col self-center items-center mt-10 w-[300px] p-4 pt-10 mx-auto neumorphic">
                
                 <!-- New Image Button -->
                 <h3 class="text-gray-600 text-sm lg:text-[0.9rem] text-center bold uppercase tracking-[1.5px] mb-1">Fetch New Image</h3>
