--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="flex flex-col">
             <!-- Image Fetch Section -->
-            <div class="flex flex-col self-center items-center -mt-[4.5rem] w-[300px] min-[400px]:w-[400px] sm:w-[600px] md:w-[700px]  lg:w-[1000px] xl:w-[1400px] p-4 pt-10 mx-auto mb-16 lg:mb-0">
+            <div class="flex flex-col self-center items-center -mt-[4.5rem] w-[300px] min-[400px]:w-[400px] sm:w-[600px] md:w-[700px]  lg:w-[1000px] xl:w-[1400px] p-4 pt-10 mx-auto mb-5">
                 
                 <!-- Loading Spinner -->
                 <div id="loadingSpinner" class="w-16 h-16 border-4 border-dashed border-gray-800 rounded-full animate-spin mb-4" style="display: none;"></div>
@@ -90,7 +90,7 @@
                 </div>
             </div>
 
-            <div class="flex flex-col self-center items-center mt-10 w-[300px] p-4 pt-10 mx-auto neumorphic">
+            <div class="flex flex-col self-center items-center mt-3 w-[300px] p-4 pt-10 mx-auto neumorphic">
                
                 <!-- New Image Button -->
                 <h3 class="text-gray-600 text-sm lg:text-[0.9rem] text-center bold uppercase tracking-[1.5px] mb-1">Fetch New Image</h3>
