--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
         </div>
 
-        <div id="assignedImagesContainer" class="flex flex-row mt-4 gap-4">
+        <div id="assignedImagesContainer" class="flex flex-row flex-wrap mt-4 gap-4">
             
         </div>
 
