Header responsivity and x overflow issues resolved

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
             <div class="mx-auto flex justify-between items-center">
                 <!-- Logo -->
                 <div class="tidy flex flex-row justify-start text-sm">
-                    <a href="#"><img src="assets/img/iv-logo.png" alt="logo" class="object-cover w-10 h-10 min-[350px]:w-12 min-[350px]:h-12"></a>
-                    <span class="font-['nunito'] text-sm text-gray-900 tracking-[1.5px] leading-8 min-[350px]:text-lg min-[350px]:leading-10  min-[450px]:text-2xl min-[450px]:leading-10 font-bold mt-1">ImageVault</span>
+                    <a href="#"><img src="assets/img/iv-logo.png" alt="logo" class="object-cover w-8 h-8 min-[450px]:w-10 min-[450px]:h-10"></a>
+                    <span class="font-['nunito'] text-sm text-gray-900 tracking-[1.5px] leading-6 min-[450px]:text-2xl min-[450px]:leading-8 font-bold mt-1">ImageVault</span>
                 </div>
     
                 <!-- Navigation Menu -->
-                <nav class="tidy flex flex-row -inset-x-2.5 justify-end text-sm min-[350px]:text-lg text-center">
-                    <button id="toggleAbout" class="w-auto text-black hover:text-[#79797a] focus:outline-none">
-                        <i class="fa-solid fa-info neumorphic-button px-2"></i> 
+                <nav class="tidy flex flex-row flex-shrink-0 justify-end text-xs min-[450px]:text-sm text-center">
+                    <button id="toggleAbout" class="w-auto text-black hover:text-[#79797a] focus:outline-none px-2 -mr-2">
+                        <i class="fa-solid fa-info neumorphic-button-nav px-2"></i> 
                     </button>
-                    <a href="mailto:matthew.dean@netmatters-scs.com" class="w-auto text-black hover:text-[#79797a] px-2">
-                    <i class="fa-regular fa-envelope neumorphic-button"></i></a>
+                    <a href="mailto:matthew.dean@netmatters-scs.com" class="w-auto text-black hover:text-[#79797a] px-2 -mr-2">
+                    <i class="fa-regular fa-envelope neumorphic-button-nav"></i></a>
                     <button id="clearLocalStorage" class="w-auto text-black px-2 hover:text-red-600">
-                        <i class="fa-solid fa-snowplow neumorphic-button px-2"></i>
+                        <i class="fa-solid fa-snowplow neumorphic-button-nav px-2"></i>
                     </button>
                 </nav>
             </div>
